Modify status
